css code is updated

--- a/Styles2.css
+++ b/Styles2.css
@@ -11,14 +11,23 @@ a {
   padding: 0;
   margin: 0;
   border: 0;
+  font-size: 100%;
+  font: inherit;
 }
 
 h1 {
   margin: 10px 0 15px 0;
 }
+main {
+  line-height: 26px;
+}
 
 h2 {
   margin: 10px 0 20px 0;
+  color: #7facaa;
+  text-align: center;
+  font-size: 26px;
+  font-weight: bold;
 }
 
 h3 {
@@ -141,3 +150,57 @@ body {
 .featuered-image {
   position: relative;
 }
+
+body {
+  font-family: 'trebuchet MS', helvetica, Arial, "Time New Roman", sans-serif;
+}
+
+footer p {
+  color: #111;
+  text-align: center;
+  font-weight: bold;
+  font-size: 12px;
+  font-style: italic;
+  text-transform: uppercase;
+}
+
+/*suggest page styles*/
+
+label,
+input {
+  display: block;
+}
+label {
+  margin-bottom: 10px;
+}
+input [type=text] {
+  width: 100%;
+  margin-bottom: 25px;
+  border: 2px solid #7facaa;
+  font-size: 24px;
+  padding: 7px;
+}
+input [type=submit] {
+  font-size: 30px;
+}
+input [type=text] {
+  border: 2px solid #7facaa;
+}
+
+textarea {
+  width: 100%;
+  height: 400px;
+  padding: 7px;
+  border: 2px solid #7facaa;
+  margin-bottom: 25px;
+  font-size: 24px;
+}
+input [type=checkbox],
+label [for=newsletter] {
+  display: inline;
+}
+input [type=checkbox] {
+ transform: scale(2)
+ padding: 10px;
+}
+*{box-sizing: border-box;}
